ping 1.56 toolchain for release/0.14

--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: '1.56'
           profile: minimal
           components: rustfmt, clippy
       - name: Check out code
@@ -83,7 +83,7 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: '1.56'
           profile: minimal
       - name: Check out code
         uses: actions/checkout@v2
