--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -37,7 +37,8 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: '1.56'
+          default: true
           profile: minimal
           components: rustfmt, clippy
       - name: Check out code
@@ -83,7 +84,8 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: '1.56'
+          default: true 
           profile: minimal
       - name: Check out code
         uses: actions/checkout@v2
@@ -170,6 +172,10 @@ jobs:
   bindgen:
     name: libthemis-sys bindings
     runs-on: ubuntu-20.04
+    # Latest version of bindgen requires new CLI flags and makes new changes
+    # in the code. There isn't much point of running this job on maintenance
+    # branch if we aren't using the latest version, so keep it disabled.
+    if: false
     steps:
       - name: Install system dependencies
         run: |
