--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ project(themis)
 cmake_minimum_required(VERSION 3.8)
 include_directories(src)
 
+if (NO_NIST_STS)
+add_definitions(-DNO_NIST_STS=1)
+endif()
 
 file(GLOB SOTER_SOURCE_FILES src/soter/*.c src/soter/openssl/*.c src/soter/ed25519/*)
 add_library(soter ${SOTER_SOURCE_FILES})
