--- a/src/wrappers/themis/python/pyproject.toml
+++ b/src/wrappers/themis/python/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.14.0"
 authors = [{ name = "CossackLabs", email = "dev@cossacklabs.com" }]
 description = "Themis is multi-platform library with a high-level and easy-to-use cryptographic toolkit for data protection"
 readme = "README.md"
-requires-python = ">=3.6"
+requires-python = ">=3.2"
 license = { file = "LICENSE" }
 dependencies = ["six", "enum34; python_version<'3.4'"]
 classifiers = [
@@ -21,6 +21,10 @@ classifiers = [
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.2",
+    "Programming Language :: Python :: 3.3",
+    "Programming Language :: Python :: 3.4",
+    "Programming Language :: Python :: 3.5",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
