Add RbThemis uninstall step to CI

--- a/.github/workflows/test-ruby.yaml
+++ b/.github/workflows/test-ruby.yaml
@@ -59,6 +59,8 @@ jobs:
         run: |
           rvm use system
           make test_ruby
+      - name: Uninstall RubyThemis
+        run: sudo make rbthemis_uninstall
 
   examples:
     name: Code examples
