--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -56,10 +56,7 @@ jobs:
           sudo sh -c 'echo "DEBIAN_FRONTEND=noninteractive" >> /etc/environment'
           sudo apt update
           sudo apt install --yes gcc make libssl-dev \
-            python  python-setuptools \
-            python3 python3-setuptools \
-            python3 python3-pip \
-            python3 python3-venv
+            python3 python3-setuptools python3-pip python3-venv
       - name: Check out code
         uses: actions/checkout@v2
       - name: Prepare Themis Core
