--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -49,7 +49,8 @@ jobs:
 
   unit-tests-venv:
     name: Unit tests (virtualenv install)
-    # TODO: Switch to something more fresh, Ubuntu 22.04 or Debian Bookworm
+    # TODO: Switch to something more fresh, Ubuntu 22.04 or Debian Bookworm,
+    #       after issue with deprecates in C++ tests is fixed
     runs-on: ubuntu-20.04
     steps:
       - name: Install system dependencies
@@ -78,7 +79,8 @@ jobs:
 
   unit-tests-deb-pkg:
     name: Unit tests (deb package)
-    # TODO: Switch to something more fresh, Ubuntu 22.04 or Debian Bookworm
+    # TODO: Switch to something more fresh, Ubuntu 22.04 or Debian Bookworm,
+    #       after issue with deprecates in C++ tests is fixed
     runs-on: ubuntu-20.04
     steps:
       - name: Install system dependencies
@@ -102,7 +104,7 @@ jobs:
       - name: Run test suite
         run: make test_python
       - name: Uninstall PyThemis
-        run: sudo apt uninstall -y pythemis
+        run: sudo apt remove -y python3-pythemis
 
   examples:
     name: Code examples
