--- a/docs/examples/android/app/build.gradle
+++ b/docs/examples/android/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion 33
+    buildToolsVersion '34.0.0'
     defaultConfig {
         applicationId "com.cossacklabs.themis.android.example"
         minSdkVersion 25
-        targetSdkVersion 29
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -20,6 +20,7 @@ android {
     }
     productFlavors {
     }
+    namespace 'com.cossacklabs.themis.android.example'
 }
 
 dependencies {
@@ -29,7 +30,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.cossacklabs.com:themis:0.14.0'
+    implementation 'com.cossacklabs.com:themis:0.15.2'
     implementation "androidx.core:core-ktx:1.3.2"
     //noinspection GradleDependency: we use slightly outdated "kotlin_version" on purpose
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
