--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -112,13 +112,13 @@ jobs:
 
   java-example:
     name: Example project – JavaThemis
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Install system dependencies
         run: |
           sudo sh -c 'echo "DEBIAN_FRONTEND=noninteractive" >> /etc/environment'
           sudo apt update
-          sudo apt install --yes gcc make libssl-dev default-jdk
+          sudo apt install --yes gcc make libssl-dev default-jdk dpkg-dev
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Themis Core with JNI
@@ -128,10 +128,10 @@ jobs:
       - name: Build JavaThemis example
         run: |
           cd docs/examples/java
-          ./gradlew --no-daemon build
+          JAVA_TOOL_OPTIONS=-Djava.library.path=/usr/local/lib ./gradlew --no-daemon build
       # Thus runs a bit of an abomination: Themis Core and JNI libs are built
       # from source while JavaThemis binaries are installed from Maven Central.
       - name: Run JavaThemis example
         run: |
           cd docs/examples/java
-          java -Djava.library.path=/usr/local/lib -jar app/build/libs/app.jar
+          JAVA_TOOL_OPTIONS=-Djava.library.path=/usr/local/lib ./gradlew --no-daemon run
