--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -14,7 +14,7 @@ criterion = { version = "0.3.4", features = ["cargo_bench_support", "html_report
 csv = "~1.1"
 # Freeze `rayon` and `rayon-core` versions (first is used by `criterion`)
 # so that benchmarks still build/run with Rust 1.58.
-# FIXME: remove thiese two after we bump minimum required Rust version
+# FIXME: remove these two after we bump minimum required Rust version
 rayon = "=1.6.1"
 rayon-core = "=1.10.1"
 
