Enable verbose builds on macOS

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -58,7 +58,7 @@ jobs:
         with:
           submodules: true
       - name: Build Themis Core (OpenSSL)
-        run: make prepare_tests_basic ENGINE=openssl BUILD_PATH=build-openssl
+        run: make prepare_tests_basic ENGINE=openssl BUILD_PATH=build-openssl VERBOSE=1
       - name: Build Themis Core (OpenSSL 3.0)
         if: ${{ matrix.os != 'ubuntu-20.04' }}
         run: |
@@ -69,7 +69,7 @@ jobs:
             export ENGINE_INCLUDE_PATH="$openssl3/include"
             export ENGINE_LIB_PATH="$openssl3/lib"
           fi
-          make prepare_tests_basic BUILD_PATH=build-openssl-3.0
+          make prepare_tests_basic BUILD_PATH=build-openssl-3.0 VERBOSE=1
       - name: Build Themis Core (BoringSSL)
         if: always()
         run: make prepare_tests_basic ENGINE=boringssl BUILD_PATH=build-boringssl
@@ -91,7 +91,7 @@ jobs:
             export ENGINE_INCLUDE_PATH="$openssl3/include"
             export ENGINE_LIB_PATH="$openssl3/lib"
           fi
-          make test BUILD_PATH=build-openssl-3.0
+          make test BUILD_PATH=build-openssl-3.0 VERBOSE=1
       - name: Run test suite (OpenSSL 3.0, uncompressed keys)
         if: ${{ matrix.os != 'ubuntu-20.04' }}
         env:
@@ -104,10 +104,10 @@ jobs:
             export ENGINE_INCLUDE_PATH="$openssl3/include"
             export ENGINE_LIB_PATH="$openssl3/lib"
           fi
-          make test BUILD_PATH=build-openssl-3.0
+          make test BUILD_PATH=build-openssl-3.0 VERBOSE=1
       - name: Run test suite (BoringSSL)
         if: always()
-        run: make test ENGINE=boringssl BUILD_PATH=build-boringssl
+        run: make test ENGINE=boringssl BUILD_PATH=build-boringssl VERBOSE=1
       - name: Run test suite (BoringSSL, uncompressed keys)
         if: always()
         env:
