Change priority of PREFIX in CFLAGS and LDFLAGS (#1031)
* Change include dir priority in CFLAGS
Move 'CFLAGS += -I/usr/local/include' below engine selection macros,
so that if OS have OpenSSL header files installed in /usr/local/include,
it won't mess with vendored BoringSSL or any other selected engine.

* Put /usr/local/lib in separate LDFLAGS
Introduce ADDITIONAL_LDFLAGS macro and put it after both LDFLAGS
and CRYPTO_ENGINE_LDFLAGS during linking.

* Add optional verbose logging to Makefile
Add VERBOSE option to Makefile. If set, print executed command
(compiler, linker etc) even for successful runs, and run ldd on created
shared libraries.

* Enable verbose builds on macOS jobs

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -36,6 +36,7 @@ jobs:
     name: Unit tests
     runs-on: ${{ matrix.os }}
     env:
+      VERBOSE: 1
       SOTER_KDF_RUN_LONG_TESTS: yes
       MATRIX_OS: ${{ matrix.os }}
     strategy:
