--- a/.github/workflows/test-wasm.yaml
+++ b/.github/workflows/test-wasm.yaml
@@ -78,7 +78,6 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - 10.x  # legacy
           - 12.x  # legacy
           - 14.x  # legacy
           - 16.x  # legacy
@@ -112,9 +111,11 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - 12.x  # old LTS
-          - 14.x  # current LTS
-          - 16.x  # current stable
+          - 12.x  # legacy
+          - 14.x  # legacy
+          - 16.x  # legacy
+          - 18.x  # current LTS
+          - 20.x  # current active
       fail-fast: false
     env:
       # WasmThemis uses promises to handle asynchronous WebAssmebly compilation.
