--- a/.github/workflows/test-nodejs.yaml
+++ b/.github/workflows/test-nodejs.yaml
@@ -33,9 +33,7 @@ jobs:
           - 10.x  # legacy
           - 12.x
           - 14.x
-          - 16.x
-          - 18.x
-          - 20.x  # current LTS
+          - 16.x  # The last one that supports OpenSSL 1.1.1
       fail-fast: false
     steps:
       - name: Install system dependencies
@@ -71,9 +69,7 @@ jobs:
         node-version:
           - 12.x  # old LTS
           - 14.x
-          - 16.x
-          - 18.x
-          - 20.x
+          - 16.x  # The last one that supports OpenSSL 1.1.1
       fail-fast: false
     steps:
       - name: Install system dependencies
@@ -136,16 +132,3 @@ jobs:
           node secure_comparator_client.js
           kill -SIGTERM "$!"
           echo "ok"
-      - name: Test examples (TypeScript Secure Cell)
-        if: always()
-        run: |
-          cd $GITHUB_WORKSPACE/docs/examples/ts
-          echo "Prepare to test"
-          npm init -y
-          npm install @types/node typescript
-          make jsthemis_install
-          ./node_modules/.bin/tsc secure_cell.ts
-          echo "Test TypeScript Secure Cell..."
-          node secure_cell.js
-          echo "ok"
-
