--- a/.github/workflows/test-nodejs-openssl3.yaml
+++ b/.github/workflows/test-nodejs-openssl3.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Compile OpenSSL 3.0.10
         run: |
           wget https://www.openssl.org/source/openssl-${{ env.OPENSSL_VERSION }}.tar.gz &&
-          sudo apt purge -y openssl && \
+          sudo apt-get purge -y ca-certificates openssl && \
           mkdir ${{ env.OPENSSL_PREFIX }} -p && \
           tar xf openssl-${{ env.OPENSSL_VERSION }}.tar.gz && \
           cd openssl-${{ env.OPENSSL_VERSION }} && \
