--- a/.github/workflows/test-nodejs.yaml
+++ b/.github/workflows/test-nodejs.yaml
@@ -5,6 +5,7 @@ on:
     paths:
       - '.github/workflows/test-nodejs.yaml'
       - 'docs/examples/js/**'
+      - 'docs/examples/ts/**'
       - 'src/soter/**'
       - 'src/themis/**'
       - 'src/wrappers/themis/jsthemis/**'
@@ -131,4 +132,11 @@ jobs:
           sleep 1 # give the server time to launch
           node secure_comparator_client.js
           kill -SIGTERM "$!"
+          echo "ok"
+      - name: Test 'import' syntax
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/js/
+          echo "Test import syntax..."
+          node import_module.mjs
           echo "ok"
