--- a/.github/workflows/test-nodejs.yaml
+++ b/.github/workflows/test-nodejs.yaml
@@ -147,15 +147,22 @@ jobs:
           npm install
           npm run compile
           ls -la *.js
-      - name: Test Typescript examples (Secure Message)
+      - name: Test Typescript examples (Secure Keygen)
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts
+          echo "Test Secure Keygen..."
+          node secure_keygen.js
+          echo "ok"
+        - name: Test Typescript examples (Secure Message)
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/ts
           echo "Test Secure Message..."
           alice=($(node secure_keygen.js | cut -c 15-))
           bob=($(node secure_keygen.js | cut -c 15-))
-          enc=$(node secure_message.js enc "${alice[0]}" "${bob[1]}" message)
-          dec=$(node secure_message.js dec "${bob[0]}" "${alice[1]}" "$enc")
+          enc=$(node secure_message.js enc "${alice[1]}" "${bob[2]}" message)
+          dec=$(node secure_message.js dec "${bob[1]}" "${alice[2]}" "$enc")
           test "$dec" = "message"
           echo "ok"
 
