--- a/src/wrappers/themis/rust/Cargo.toml
+++ b/src/wrappers/themis/rust/Cargo.toml
@@ -29,15 +29,18 @@ bindings = { package = "libthemis-sys", path = "libthemis-sys", version = "0.14.
 zeroize = "1"
 
 [dev-dependencies]
-base64 = "0.10.0"
-# Freeze byteorder, log, memchr, regex so that tests still build/run with Rust 1.60.
-# `regex` is dependency of `env_logger`, 1.9.6 switched to Rust 1.65.
-# `memchr` is dependency of `regex`, at the time of writing this latest version required Rust 1.65.
+# Freeze byteorder, log so that tests still build/run with Rust 1.60.
+# Other crates are frozen in hope to avoid more problems in future, where something updates
+# and requires newer toolchain version compared to what we require for RustThemis.
 # FIXME: remove/update strict version requirement after we bump minimum required Rust version
+base64 = "=0.10.1"
 byteorder = "=1.4.3"
-clap = "2.32"
-lazy_static = "1.2.0"
+clap = "=2.34.0"
+lazy_static = "=1.4.0"
 log = "=0.4.17"
-env_logger = "0.6.0"
+env_logger = "=0.6.2"
+
+# These are not used in themis tests, but are rather dependencies of dev-dependencies listed above.
+# Specifying exact versions so that tests could build/run on Rust 1.60.
 regex = "=1.9.5"
 memchr = "=2.6.1"
