--- a/.github/workflows/test-nodejs.yaml
+++ b/.github/workflows/test-nodejs.yaml
@@ -5,6 +5,7 @@ on:
     paths:
       - '.github/workflows/test-nodejs.yaml'
       - 'docs/examples/js/**'
+      - 'docs/examples/ts/**'
       - 'src/soter/**'
       - 'src/themis/**'
       - 'src/wrappers/themis/jsthemis/**'
@@ -126,6 +127,65 @@ jobs:
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/js
+          echo "Test Secure Comparator..."
+          node secure_comparator_server.js &
+          sleep 1 # give the server time to launch
+          node secure_comparator_client.js
+          kill -SIGTERM "$!"
+          echo "ok"
+      - name: Test 'import' syntax
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/js/
+          echo "Test import syntax..."
+          node import_module.mjs
+          echo "ok"
+      - name: Install Typescript deps
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts/
+          npm install
+          npm run compile
+      - name: Test Typescript examples (Secure Keygen)
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts
+          echo "Test Secure Keygen..."
+          node secure_keygen.js
+          echo "ok"
+      - name: Test Typescript examples (Secure Cell)
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts
+          echo "Test Secure Cell..."
+          node secure_cell.js
+          echo "ok"
+      - name: Test Typescript examples (Secure Message)
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts
+          echo "Test Secure Message..."
+          alice=($(node secure_keygen.js | cut -c 15-))
+          bob=($(node secure_keygen.js | cut -c 15-))
+          enc=$(node secure_message.js enc "${alice[1]}" "${bob[2]}" message)
+          dec=$(node secure_message.js dec "${bob[1]}" "${alice[2]}" "$enc")
+          test "$dec" = "message"
+          echo "ok"
+      - name: Test Typescript examples (Secure Session)
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts
+          echo "Test Secure Session..."
+          node secure_session_server.js &
+          sleep 1 # give the server time to launch
+          node secure_session_client.js > output.txt
+          kill -SIGTERM "$!"
+          grep -q 'Hello server!!!' output.txt
+          echo "ok"
+      - name: Test Typescript examples (Secure Comparator)
+        if: always()
+        run: |
+          cd $GITHUB_WORKSPACE/docs/examples/ts
           echo "Test Secure Comparator..."
           node secure_comparator_server.js &
           sleep 1 # give the server time to launch
